--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="#work">Live Demos</a></li>
             <li><a href="#Blog">Blog</a></li>
             <li><a href="#footer">Contact</a></li>
+            <div id="darkModeButtonContainer"></div>
             </ul>
         </nav>
 </header>
@@ -261,6 +262,7 @@
           </div>
       </section>
       <!-- footer section ends -->
+      <script src="script.js"></script>
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
 <script>
